--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,6 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>app</finalName>
     </build>
-
 </project>
