--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,22 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Terraform ###
+# Local .terraform directories
+**/.terraform/*
+.terraform*
+*.tfstate
+*.tfstate.*
+crash.log
+*.tfvars
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+.terraformrc
+terraform.rc
+
+### SonarQube ###
+.scannerwork
+covarge.out
