--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,8 @@
     <properties>
         <java.version>21</java.version>
         <compiler-plugin.version>3.8.1</compiler-plugin.version>
+        <sonar.organization>vhcleite</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
     <dependencies>
         <dependency>
