add rest template calls

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -3,3 +3,6 @@ spring.data.mongodb.uri: mongodb://localhost:27070/docker-db
 mongo:
   connection: mongodb://localhost:27070
   database: docker-db
+
+pedido:
+  uri: http://localhost:8081
